# api-mesh-gateway

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml
apimesh/: __init__.py  cli.py  config.py  config_loader.py  main.py
apimesh/ai/: __init__.py  traffic_predictor.py
apimesh/auth/: __init__.py  api_key.py  base.py  jwt.py
apimesh/cache/: __init__.py  redis_cache.py
apimesh/circuit/: __init__.py  breaker.py
apimesh/core/: __init__.py  config.py
apimesh/limiter/: __init__.py  rate_limiter.py
apimesh/routing/: __init__.py  router.py
apimesh/transform/: __init__.py
apimesh/validation/: __init__.py
tests/: test_auth.py  test_config.py  test_gateway.py  test_validation.py
